--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@1,300;1,600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
@@ -22,7 +23,11 @@
   <body>
     <!-- Top nav bar (fixed) -->
     <nav>
-      <span class="nav">tweeter</span>
+      <span class="logo">Tweeter</span>
+      <div class="write-tweet">
+        <span class="write-new-tweet"><strong>Write</strong> a new tweet</span>
+      <i class="fas fa-angle-double-down" style= "color: red"></i>
+      </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
