--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/styles/nav.css" type="text/css">
     <link rel="stylesheet" href="/styles/header.css" type="text/css">
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css">
-
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css">
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
@@ -54,6 +54,28 @@
           </div>
         </form>
       </section>
+      <article class="tweet">
+        <header class="tweet-header">
+          <div class="user-profile">
+            <img class="user-icon"><i class="fa-brands fa-apple fa-2x"></i></img> 
+            <h4 class="user-name">Steve Jobs</h4>
+          </div>
+          <div>
+            <h4 class="user-handle">@AppleGuy</h4>
+          </div>
+        </header>
+        <div class="tweet-text">
+          I love to eat apples!
+        </div>
+        <footer class="tweet-footer">
+          <span class="tweet-date">10 days ago</span>
+          <div class="tweet-response">
+            <i class="fas fa-flag"></i>
+            <i class="fas fa-retweet"></i>
+            <i class="fas fa-heart"></i>
+          </div>
+        </footer>
+      </article>
     </main>
   </body>
 </html>
