--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
     <main class="container">
       <section class="new-tweet">
         <h2>Compose Tweet</h2>
-        <form action="/tweets/" method="POST" id="new-tweet-form">
+        <form action="/tweets" method="POST" id="new-tweet-form">
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="new-tweet-footer">
             <button id="submit" type="submit">Tweet</button>
@@ -54,28 +54,9 @@
           </div>
         </form>
       </section>
-      <article class="tweet">
-        <header class="tweet-header">
-          <div class="user-profile">
-            <img class="user-icon"><i class="fa-brands fa-apple fa-2x"></i></img> 
-            <h4 class="user-name">Steve Jobs</h4>
-          </div>
-          <div>
-            <h4 class="user-handle">@AppleGuy</h4>
-          </div>
-        </header>
-        <div class="tweet-text">
-          I love to eat apples!
-        </div>
-        <footer class="tweet-footer">
-          <span class="tweet-date">10 days ago</span>
-          <div class="tweet-response">
-            <i class="fas fa-flag"></i>
-            <i class="fas fa-retweet"></i>
-            <i class="fas fa-heart"></i>
-          </div>
-        </footer>
-      </article>
+
+      <section id="tweets-container"></section>
+
     </main>
   </body>
 </html>
