fixed functionality errors and UI/UX design problems

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
         </span>
         <span id="error-message-tooLong" class="error-message-box">
           <i class="fas fa-exclamation-triangle"></i>
-          Please reduce your tweent content to less than or equal to 140 characters!
+          Please reduce your tweet content to less than or equal to 140 characters!
           <i class="fas fa-exclamation-triangle"></i>
         </span>
         <form action="/tweets" method="POST" id="new-tweet-form">
